[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/FashionVictim.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Lobby/WaitingRoom.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/default.theme" type="Theme" id=3]
[ext_resource path="res://Lobby/Lobby.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Lobby" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -600.0
color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 34.0
theme = SubResource( 4 )
text = "Lobby"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 1024.0
margin_bottom = 198.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 295.0
margin_right = 728.0
margin_bottom = 160.0
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 5.0
margin_right = 97.0
margin_bottom = 30.0
theme = SubResource( 6 )
text = "Name:"
align = 2

[node name="NameTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_right = 433.0
margin_bottom = 35.0
rect_min_size = Vector2( 320, 0 )
text = "Player"
align = 1

[node name="IPLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 48.0
margin_right = 97.0
margin_bottom = 73.0
theme = SubResource( 6 )
text = "IP:"
align = 2

[node name="IPTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_top = 43.0
margin_right = 433.0
margin_bottom = 78.0
rect_min_size = Vector2( 320, 0 )
text = "127.0.0.1"
align = 1

[node name="PortLabel" type="Label" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 91.0
margin_right = 97.0
margin_bottom = 116.0
theme = SubResource( 6 )
text = "Port:"
align = 2

[node name="PortTextbox" type="LineEdit" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_top = 86.0
margin_right = 433.0
margin_bottom = 121.0
rect_min_size = Vector2( 320, 0 )
text = "32032"
align = 1

[node name="HostButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_top = 129.0
margin_right = 97.0
margin_bottom = 160.0
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer/CenterContainer/GridContainer"]
margin_left = 113.0
margin_top = 129.0
margin_right = 433.0
margin_bottom = 160.0
text = "Join Game"

[node name="WaitingRoom" parent="." groups=[
"WaitingRoom",
] instance=ExtResource( 2 )]

[node name="ItemList" parent="WaitingRoom/VBoxContainer/CenterContainer" index="0"]
margin_top = 33.0
margin_bottom = 33.0
items = [ "Player 1", null, false, "Player 2", null, false ]
[connection signal="text_changed" from="VBoxContainer/CenterContainer/GridContainer/NameTextbox" to="." method="_on_NameTextbox_text_changed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/GridContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="WaitingRoom/VBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]

[editable path="WaitingRoom"]
